# cross_embodiment

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: calibration_clicks.json  yam_scene.xml
scripts/: 01_fetch_data.py  02_mask.py  02a_mask_sanity.py  03_depth.py  04_inpaint.py  04b_inpaint_median.py  04c_inpaint_lama.py  05_render_yam.py  06_composite.py  07_undistort.py  08_depth_pinhole.py  09_solve_pnp.py  09b_solve_pnp_fisheye.py  10_render_calibrated.py  11_pinhole_composite.py  12_mask_pinhole.py  12_mask_pinhole_sanity.py  13_solve_pnp_pinhole.py  14_inpaint_pinhole.py  15_composite_pinhole.py  16_render_debug.py  17_composite_debug.py  18_overlay_clicks.py  19_solve_pnp_auto.py  20_proj_overlay.py  21_render_grippers.py  22_gripper_overlay_cv2.py  23_render_full_yam.py  24_ik_debug.py  25_render_one_frame.py  26_three_options.py  27_render_full_frame.py  28_ik_sweep.py  29_yaw_sweep.py  30_yam_sanity.py  31_yam_inspect.py  32_render_full_episode.py  33_overlay_displays.py  inspect_frame.py
viewer/: calibrate.html  index.html
